@@ -12,6 +12,13 @@ repositories {
     mavenCentral()
 }
 
+compileJava {
+    options.compilerArgs += ["--enable-preview"]
+}
+test {
+    jvmArgs '--enable-preview'
+}
+
 dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-webflux'
     implementation 'org.axonframework:axon-spring-boot-starter:4.3.2'
